...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/first_team_layout"
            android:layout_toStartOf="@+id/first_team_layout">

            <ImageButton
                android:id="@+id/meld_spinner_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorBackground"
                android:contentDescription="@string/icon_description_meld_spinner"
                android:src="@drawable/ic_chat_bubble_outline_black"/>
...
            android:layout_width="@dimen/jass_scoreboard_team_layout_width"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_display_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/jass_score_display_margin"
                android:layout_marginTop="@dimen/jass_score_display_margin"
...
                android:text="@string/jass_default_score"
                android:textColor="@android:color/black"
                android:textSize="@dimen/jass_score_text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/team_goal_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_display_1"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/first_team_layout"
            android:layout_toRightOf="@+id/first_team_layout">

            <ImageButton
                android:id="@+id/score_update_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorBackground"
                android:contentDescription="@string/icon_description_score_update"
                android:src="@drawable/ic_add_black"/>
...
        android:id="@+id/scoreboard_vertical_delimiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageButton
            android:id="@+id/scoreboard_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorBackground"
            android:contentDescription="@string/icon_description_score_cancel"
            android:src="@drawable/ic_undo_black"/>

        <TextView
            android:id="@+id/scoreboard_common_points_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/scoreboard_split_team_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/colorBackground"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/second_team_layout"
            android:layout_toStartOf="@+id/second_team_layout">

            <ImageButton
                android:id="@+id/meld_spinner_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorBackground"
                android:contentDescription="@string/icon_description_meld_spinner"
                android:src="@drawable/ic_chat_bubble_outline_black"/>
...
            android:layout_width="@dimen/jass_scoreboard_team_layout_width"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_display_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/jass_score_display_margin"
                android:layout_marginTop="@dimen/jass_score_display_margin"
...
                android:text="@string/jass_default_score"
                android:textColor="@android:color/black"
                android:textSize="@dimen/jass_score_text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/team_goal_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_display_2"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/second_team_layout"
            android:layout_toRightOf="@+id/second_team_layout">

            <ImageButton
                android:id="@+id/score_update_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorBackground"
                android:contentDescription="@string/icon_description_score_update"
                android:src="@drawable/ic_add_black"/>
...
