<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_score_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/table_score_history_min_dimensions"
    android:minWidth="@dimen/table_score_history_min_dimensions"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/score_history_column_titles"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/table_score_history_title_margin"
        android:layout_marginTop="@dimen/table_score_history_title_margin"
        tools:ignore="UselessParent">

        <TextView
            android:layout_gravity="center"
            android:text="@string/score_history_round"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/score_history_points"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/score_history_melds"
            android:textColor="@android:color/black"/>

    </TableRow>

</TableLayout>
